--- a/book/print.html
+++ b/book/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> mdBook</a></li><li class="chapter-item expanded "><a href="bash.html"><strong aria-hidden="true">2.</strong> bash</a></li><li class="chapter-item expanded "><a href="azure/index.html"><strong aria-hidden="true">3.</strong> azure</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="azure/010-az-setup.html"><strong aria-hidden="true">3.1.</strong> az-setup</a></li><li class="chapter-item expanded "><a href="azure/020-az-kubectl-setup.html"><strong aria-hidden="true">3.2.</strong> az-kubectl-setup</a></li><li class="chapter-item expanded "><a href="azure/030-kubectl-ns.html"><strong aria-hidden="true">3.3.</strong> kubectl-ns</a></li><li class="chapter-item expanded "><a href="azure/040-azurek8.html"><strong aria-hidden="true">3.4.</strong> azure-micro-k8</a></li></ol></li><li class="chapter-item expanded "><a href="docker/index.html"><strong aria-hidden="true">4.</strong> docker</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="docker/010-docker-compute.html"><strong aria-hidden="true">4.1.</strong> docker-compute</a></li><li class="chapter-item expanded "><a href="docker/020-docker-storage.html"><strong aria-hidden="true">4.2.</strong> docker-storage</a></li><li class="chapter-item expanded "><a href="docker/028-docker-long-running.html"><strong aria-hidden="true">4.3.</strong> docker-long-running</a></li><li class="chapter-item expanded "><a href="docker/030-docker-networking.html"><strong aria-hidden="true">4.4.</strong> docker-networking</a></li><li class="chapter-item expanded "><a href="docker/035-docker-background.html"><strong aria-hidden="true">4.5.</strong> docker-background</a></li></ol></li><li class="chapter-item expanded "><a href="kubernetes/00-kubectl-overview.html"><strong aria-hidden="true">5.</strong> kubernetes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="kubernetes/01-kubectl-apply.html"><strong aria-hidden="true">5.1.</strong> kubectl-apply</a></li><li class="chapter-item expanded "><a href="kubernetes/application.html"><strong aria-hidden="true">5.2.</strong> yaml example</a></li></ol></li><li class="chapter-item expanded "><a href="rust/index.html"><strong aria-hidden="true">6.</strong> Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust/common_datatypes.html"><strong aria-hidden="true">6.1.</strong> common-datatypes</a></li><li class="chapter-item expanded "><a href="rust/errorhandling.html"><strong aria-hidden="true">6.2.</strong> errorhandling</a></li><li class="chapter-item expanded "><a href="rust/common_collections.html"><strong aria-hidden="true">6.3.</strong> common-collections</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../index.html"><strong aria-hidden="true">1.</strong> mdBook</a></li><li class="chapter-item expanded "><a href="bash.html"><strong aria-hidden="true">2.</strong> bash</a></li><li class="chapter-item expanded "><a href="azure/index.html"><strong aria-hidden="true">3.</strong> azure</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="azure/010-az-setup.html"><strong aria-hidden="true">3.1.</strong> az-setup</a></li><li class="chapter-item expanded "><a href="azure/020-az-kubectl-setup.html"><strong aria-hidden="true">3.2.</strong> az-kubectl-setup</a></li><li class="chapter-item expanded "><a href="azure/030-kubectl-ns.html"><strong aria-hidden="true">3.3.</strong> kubectl-ns</a></li><li class="chapter-item expanded "><a href="azure/040-azurek8.html"><strong aria-hidden="true">3.4.</strong> azure-micro-k8</a></li></ol></li><li class="chapter-item expanded "><a href="docker/index.html"><strong aria-hidden="true">4.</strong> docker</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="docker/010-docker-compute.html"><strong aria-hidden="true">4.1.</strong> docker-compute</a></li><li class="chapter-item expanded "><a href="docker/020-docker-storage.html"><strong aria-hidden="true">4.2.</strong> docker-storage</a></li><li class="chapter-item expanded "><a href="docker/028-docker-long-running.html"><strong aria-hidden="true">4.3.</strong> docker-long-running</a></li><li class="chapter-item expanded "><a href="docker/030-docker-networking.html"><strong aria-hidden="true">4.4.</strong> docker-networking</a></li><li class="chapter-item expanded "><a href="docker/035-docker-background.html"><strong aria-hidden="true">4.5.</strong> docker-background</a></li></ol></li><li class="chapter-item expanded "><a href="kubernetes/00-kubectl-overview.html"><strong aria-hidden="true">5.</strong> kubernetes</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="kubernetes/01-kubectl-apply.html"><strong aria-hidden="true">5.1.</strong> kubectl-apply</a></li><li class="chapter-item expanded "><a href="kubernetes/application.html"><strong aria-hidden="true">5.2.</strong> yaml example</a></li></ol></li><li class="chapter-item expanded "><a href="rust/index.html"><strong aria-hidden="true">6.</strong> Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust/common_datatypes.html"><strong aria-hidden="true">6.1.</strong> common-datatypes</a></li><li class="chapter-item expanded "><a href="rust/errorhandling.html"><strong aria-hidden="true">6.2.</strong> error-handling</a></li><li class="chapter-item expanded "><a href="rust/common_collections.html"><strong aria-hidden="true">6.3.</strong> common-collections</a></li><li class="chapter-item expanded "><a href="rust/enum_trait_struct.html"><strong aria-hidden="true">6.4.</strong> enums trait struct</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -496,6 +496,25 @@ str borrowed </p>
 <p>https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=d49b99987d8e0625599c5e8b5b40e885 </p>
 <p>copy only copys the header(pointers, len, size) but it points to the same location on the heap </p>
 <p>heap based bindings</p>
+<h2><a class="header" href="#bitwise-stuff" id="bitwise-stuff">Bitwise stuff</a></h2>
+<pre><code>AND
+0 0 | 0
+0 1 | 0
+1 0 | 0
+1 1 | 1
+
+OR
+0 0 | 0
+0 1 | 1
+1 0 | 1
+1 1 | 1
+
+XOR
+0 0 | 0
+0 1 | 1
+1 0 | 1
+1 1 | 0
+</code></pre>
 <h1><a class="header" href="#common-datatypes-in-rust" id="common-datatypes-in-rust">Common Datatypes in Rust</a></h1>
 <h2><a class="header" href="#the-different-strings-in-rust" id="the-different-strings-in-rust">The different strings in Rust</a></h2>
 <p><code>String</code> is an owned typed 
@@ -551,6 +570,33 @@ more may not return a value)</p>
 <h2><a class="header" href="#hashmap-examples" id="hashmap-examples">Hashmap examples</a></h2>
 <p>The last of our common collections is the hash map. The type HashMap&lt;K, V&gt; stores a mapping of keys of type K to values of type V. It does this via a hashing function, which determines how it places these keys and values into memory. Many programming languages support this kind of data structure, but they often use a different name, such as hash, map, object, hash table, dictionary, or associative array, just to name a few. </p>
 <p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=e4b787dada5bc813b0ef62e09678c833">Hashmap playground</a> </p>
+<h1><a class="header" href="#enums" id="enums">Enums</a></h1>
+<p>Enums are sum-types. Number of different states are added by the number of fields</p>
+<pre><code>#[derive(Debug)]
+enum IpAddrKind {
+    V4,
+    V6,
+}
+</code></pre>
+<ul>
+<li>There can only be 2 possible states for this enum hence sum-type</li>
+<li>Enums are great with match statements, can do pattern matching with them</li>
+</ul>
+<h1><a class="header" href="#structs" id="structs">Structs</a></h1>
+<p>Structs are product-types, number of states is a multiple of the number of fields</p>
+<pre><code>#[derive(Debug)]
+struct User {
+  username: String,
+  email: String,
+  sign_in_count: u64,
+  active: bool,
+}
+</code></pre>
+<h2><a class="header" href="#non-accurate-descriptions-adaefsas" id="non-accurate-descriptions-adaefsas">Non-accurate descriptions Adaefsas</a></h2>
+<ul>
+<li>Enum contains &quot;variants&quot;, can only ever be 1, Ex: V6 can never be V4</li>
+<li>Structs contain fields and are meant to represent something. Enums are constrained</li>
+</ul>
 
                     </main>
 
